--- a/tex/our_references.bib
+++ b/tex/our_references.bib
@@ -1,4 +1,40 @@
-﻿@article{Irwin1996,
+﻿@article{Tuch2012Is,
+  title={Is beautiful really usable? Toward understanding the relation between usability, aesthetics, and affect in HCI},
+  author={Tuch, Alexandre N. and Roth, Sandra P. and Hornbæk, Kasper and Opwis, Klaus and Bargas-Avila, Javier A.},
+  journal={Computers in Human Behavior},
+  volume={28},
+  number={5},
+  pages={1596-1607},
+  year={2012},
+}
+
+@book{Seckler2015Linking,
+  title={Linking objective design factors with subjective aesthetics},
+  author={Seckler, Mirjam and Opwis, Klaus and Tuch, Alexandre N.},
+  publisher={Elsevier Science Publishers B. V.},
+  pages={375-389},
+  year={2015},
+}
+
+@book{Li2010Increasing,
+  title={Increasing trust in mobile commerce through design aesthetics},
+  author={Li, Yung Ming and Yeh, Yung Shao},
+  publisher={Elsevier Science Publishers B. V.},
+  pages={673-684},
+  year={2010},
+}
+
+@article{Casal2008The,
+  title={The role of perceived usability, reputation, satisfaction and consumer familiarity on the website loyalty formation process},
+  author={Casal\'o, Luis and Flavi\'an, Carlos and Guinal\'iu, Miguel},
+  journal={Computers in Human Behavior},
+  volume={24},
+  number={2},
+  pages={325-345},
+  year={2008},
+}
+
+@article{Irwin1996,
   title={E.(1996). Integrating information across saccadic eye movements},
   author={Irwin, David},
   journal={Current Directions in Psychological Science},
